<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="20sp"
    android:gravity="center"
    android:background="@drawable/ic_bg"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/heading_clr"
        android:layout_marginBottom="25sp"
        android:gravity="center"
        />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20sp"
            android:background="@color/card_clr"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="22sp"
                android:gravity="center"
                android:textStyle="italic|bold"
                android:textColor="@color/red"
                android:layout_marginBottom="20sp"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/usr_txtforEntry"
                android:textSize="18sp"
                android:gravity="center"
                android:textStyle="normal"
                android:textColor="@color/red"
                android:layout_marginBottom="20sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
                android:background="@color/white"
                app:counterTextColor="@color/black"
                android:layout_marginBottom="20dp"
                >

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/TextField1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/e_g_mahi"
                    android:inputType="textCapWords"
                    android:textColor="@color/black"
                    android:textColorHint="@color/grey"
                    tools:ignore="SpeakableTextPresentCheck,VisualLintTextFieldSize" />

            </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/btnSubmit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:backgroundTint="#3a86ff"
                android:text="@string/submit"
                android:textStyle="bold"
                android:textSize="15sp"

                tools:ignore="VisualLintButtonSize" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>


</LinearLayout>